--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,16 +1,21 @@
 .nav {
   display: flex;
-  gap: 17px;
+  gap: 8px;
+  margin-right: 30px;
 }
 .nav__link {
   font-size: 20px;
-  font-weight: 600;
+  font-family: 'Dosis', sans-serif;
   text-decoration: none;
-  color: black;
-  transition: all 200ms linear;
+  color: rgb(136, 129, 129);
+  transition: all 100ms ease;
+  padding: 3px 10px;
 }
 .nav__link:hover,
 .nav__link:focus {
-  color: white;
+  color: black;
+  font-weight: 600;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 4px 2px 4px -10px, rgba(0, 0, 0, 0.2) -3px -2px 0px inset;
   transform: scale(1.1);
 }
