--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,6 +3,10 @@
   gap: 8px;
   margin-left: 30px;
 }
+.nav__icon {
+  width: 15px;
+  padding-right: 5px;
+}
 .nav__link {
   font-size: 20px;
   font-family: 'Dosis', sans-serif;
