--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: 15px;
-  margin-right: 40px;
+  margin: 4px 40px 0 0;
 }
 .usermenu__text {
   font-size: 16px;
@@ -18,6 +18,7 @@
 .usermenu__btn {
   font-family: 'Dosis', sans-serif;
   border: 1px solid rgb(206, 205, 205);
+  margin-bottom: 5px;
   padding: 5px 10px;
   color: rgb(136, 129, 129);
   background-color: white;
