[HW 9][feat] - add style component, add contacts

--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -23,6 +23,7 @@
   color: rgb(136, 129, 129);
   background-color: white;
   transition: all 100ms ease;
+  cursor: pointer;
 }
 .usermenu__btn:hover,
 .usermenu__btn:focus {
