--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -36,6 +36,7 @@
   background-color: white;
   transition: all 100ms ease;
   margin-top: 7px;
+  cursor: pointer;
 }
 .form__btn:hover,
 .form__btn:focus {
