--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -30,6 +30,16 @@
   font-size: 20px;
   font-family: 'Dosis', sans-serif;
   font-style: italic;
-  text-shadow: 2px 2px 3px rgba(66, 68, 90, 1);
+  text-shadow: 1px 1px 2px rgba(66, 68, 90, 1);
   animation: pulse 12s infinite;
+}
+.homePage__online {
+  font-size: 20px;
+  font-family: 'Dosis', sans-serif;
+  text-shadow: 1px 1px 2px rgba(66, 68, 90, 1);
+  animation: pulse 12s infinite;
+}
+.homePage__name {
+  padding-left: 3px;
+  font-size: 26px;
 }
