--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,11 +1,11 @@
 .appbar__wrapper {
   display: flex;
   justify-content: center;
-  margin-top: 3px;
 }
 .appbar__item {
-  height: 45px;
+  height: 50px;
   width: 70%;
+  padding: 20px;
   border-bottom: 1px solid rgb(206, 205, 205);
   font-family: 'Dosis', sans-serif;
   justify-content: center;
