--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,24 +1,20 @@
-.filter {
-  margin-left: 135px;
+.nav {
+  display: flex;
+  gap: 15px;
+  margin-left: 30px;
 }
-
-.filter__input {
-  min-width: 500px;
-  font-size: 25px;
-  font-weight: 200;
-  border: 1px solid rgb(206, 205, 205);
-  border-radius: 3px;
+.nav__link {
+  font-size: 30px;
   font-family: 'Dosis', sans-serif;
   text-decoration: none;
   color: rgb(136, 129, 129);
   transition: all 100ms ease;
   padding: 5px 14px;
 }
-.filter__input:hover,
-.filter__input:focus {
+.nav__link:hover,
+.nav__link:focus {
   color: black;
-  font-weight: 400;
-  border: none;
+  font-weight: 600;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
     rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
