--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,25 +1,33 @@
 .usermenu__wrapper {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 18px;
   margin: 4px 40px 0 0;
 }
 .usermenu__text {
-  font-size: 16px;
+  font-size: 25px;
   font-family: 'Dosis', sans-serif;
+  font-weight: 100;
   text-decoration: none;
   color: rgb(136, 129, 129);
   transition: all 100ms ease;
 }
 .usermenu__name {
-  font-family: 'Dosis', sans-serif;
+  padding: 5px 16px 5px 14px;
+  font-size: 30px;
+  color: black;
   font-weight: 600;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
+    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
 }
 .usermenu__btn {
+  font-size: 30px;
   font-family: 'Dosis', sans-serif;
   border: 1px solid rgb(206, 205, 205);
-  margin-bottom: 5px;
-  padding: 5px 10px;
+  border-radius: 3px;
+
+  padding: 5px 14px;
   color: rgb(136, 129, 129);
   background-color: white;
   transition: all 100ms ease;
@@ -29,7 +37,8 @@
 .usermenu__btn:focus {
   color: black;
   font-weight: 600;
-  transform: scale(1.2);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 4px 2px 4px -10px, rgba(0, 0, 0, 0.2) -2px -1px 0px inset;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
+    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
+  transform: scale(1.1);
 }
