--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,34 +1,54 @@
+.wrapper {
+  margin: 30px 0 0 40px;
+}
+
 .form {
   display: flex;
-  flex-direction: column;
   gap: 15px;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  padding: 15px;
-  border-radius: 10px;
 }
 
 .form__input {
-  display: block;
-  margin-top: 10px;
-  padding: 7px;
-  border-radius: 5px;
-  transition: all 250ms linear;
+  min-width: 200px;
+  font-size: 25px;
+  font-weight: 200;
+  border: 1px solid rgb(206, 205, 205);
+  border-radius: 3px;
+  font-family: 'Dosis', sans-serif;
+  text-decoration: none;
+  color: rgb(136, 129, 129);
+  transition: all 100ms ease;
+  padding: 5px 14px;
 }
 .form__input:hover {
+  outline: none;
+  color: black;
+  font-weight: 400;
+  border: none;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
+    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
   transform: scale(1.1);
 }
 
 .form__button {
-  margin: 10px 0 15px 0;
-  padding: 5px 15px;
-  border-radius: 5px;
-  transition: all 0.4s linear;
+  font-size: 30px;
+  font-family: 'Dosis', sans-serif;
+  border: 1px solid rgb(206, 205, 205);
+  border-radius: 3px;
+
+  padding: 5px 14px;
+  color: rgb(136, 129, 129);
+  background-color: white;
+  transition: all 100ms ease;
+  cursor: pointer;
 }
 
 .form__button:hover {
-  transform: scale(1.2);
-  background-color: rgb(25, 186, 25);
-  color: white;
-  cursor: pointer;
+  color: black;
+  font-weight: 600;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
+    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
+  transform: scale(1.1);
 }
