--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,5 +1,6 @@
 .contacts {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   margin-top: 30px;
 }
@@ -9,7 +10,8 @@
   align-items: center;
   min-width: 150px;
   border-radius: 3px;
-  border: 1px solid rgb(206, 205, 205);
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px,
+    rgba(0, 0, 0, 0.3) 4px 2px 4px -10px, rgba(0, 0, 0, 0.2) -3px -2px 0px inset;
   transition: all 100ms linear;
   animation: 1.5s cubic-bezier(0.25, 0.25, 0.25, 1.15) both fade-in;
 }
@@ -24,16 +26,11 @@
     transform: rotate('0');
   }
 }
-.contacts__item:hover {
-  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
-    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
-  transform: scale(1.1);
-}
 .contacts__name {
   font-family: 'Dosis', sans-serif;
   font-size: 25px;
   font-weight: 400;
-  padding: 20px 15px 0 10px;
+  padding: 20px 15px 0 15px;
   margin: 0;
 }
 
@@ -41,7 +38,7 @@
   font-family: 'Dosis', sans-serif;
   font-size: 22px;
   font-weight: 200;
-  padding: 0px 15px 0 10px;
+  padding: 0px 15px 0 15px;
 }
 
 .contact__icon {
@@ -61,6 +58,50 @@
 }
 
 .contacts__button:hover {
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
+    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.contacts__wrapperName {
+  max-width: 75%;
+  font-family: 'Dosis', sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  text-shadow: none;
+  border: none;
+  text-align: center;
+  outline: none;
+  margin-top: 20px;
+  padding: 0;
+  border-radius: 3px;
+  border: 1px solid rgb(206, 205, 205);
+}
+
+.contacts__wrapperNumber {
+  max-width: 75%;
+  font-family: 'Dosis', sans-serif;
+  font-size: 22px;
+  font-weight: 200;
+  text-shadow: none;
+  border: none;
+  text-align: center;
+  outline: none;
+  margin-top: 20px;
+  padding: 0;
+  border-radius: 3px;
+  border: 1px solid rgb(206, 205, 205);
+}
+.contacts__wrapperBtn {
+  padding: 5px 15px;
+  border-radius: 3px;
+  background-color: white;
+  border: 1px solid rgb(206, 205, 205);
+  transition: all 100ms linear;
+  margin: 20px;
+}
+.contacts__wrapperBtn:hover,
+.contacts__wrapperBtn:focus {
   box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
     rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
   transform: scale(1.1);
